feat: decouple execution runtime from DSL compiler via snapshots
Signed-off-by: Aleksandr Suvorov <asuvorov@hensu.io>